Amélioration du CSS et ajout des balises images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenue au Zoo Éco Responsable Arcadia</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
@@ -21,25 +20,80 @@
     </header>
 
     <main>
+        <!-- Présentation générale -->
         <section id="presentation">
             <h2>Découvrez le Zoo Arcadia</h2>
             <p>Situé à proximité de la forêt de Brocéliande en Bretagne, Arcadia est un zoo éco-responsable qui préserve la nature et ses habitants.</p>
             <img src="images/zoo.jpg" alt="Image du Zoo Arcadia">
         </section>
 
+        <!-- Section Habitats -->
         <section id="habitats">
             <h2>Nos Habitats</h2>
             <article>
                 <h3>La Jungle</h3>
-                <p>Une oasis luxuriante où vivent des singes, des perroquets et des tigres.</p>
+                <p>Une oasis luxuriante où vivent des singes, des perroquets, des serpents, des tigres et bien d'autres.</p>
+                <img src="images/jungle.jpg" alt="Image de la Jungle">
             </article>
             <article>
                 <h3>Le Marais</h3>
                 <p>Découvrez les crocodiles, les flamants roses et les tortues dans cet habitat humide.</p>
+                <img src="images/marais.jpg" alt="Image du Marais">
             </article>
             <article>
                 <h3>La Savane</h3>
                 <p>Rencontrez nos majestueux lions, girafes et zèbres.</p>
+                <img src="images/savane.jpg" alt="Image de la Savane">
+            </article>
+        </section>
+
+        <!-- Section Animaux -->
+        <section id="animaux">
+            <h2>Nos Animaux</h2>
+            <article>
+                <h3>Singe Capucin</h3>
+                <p>Un petit primate vif et intelligent vivant dans la jungle.</p>
+                <img src="images/singe.jpg" alt="Image d'un Singe Capucin">
+            </article>
+            <article>
+                <h3>Tigre</h3>
+                <p>Un félin redoutable vivant dans la jungle.</p>
+                <img src="images/tigre.jpg" alt="Image d'un Tigre">
+            </article>
+            <article>
+                <h3>Anaconda</h3>
+                <p>Un des plus gros serpents vivant dans la jungle.</p>
+                <img src="images/serpent.jpg" alt="Image d'un Anaconda">
+            </article>
+            <article>
+                <h3>Crocodile du Nil</h3>
+                <p>Un redoutable prédateur semi-aquatique vivant dans le marais.</p>
+                <img src="images/crocodile.jpg" alt="Image d'un Crocodile">
+            </article>
+            <article>
+                <h3>Flamants rose</h3>
+                <p>Un majestueux oiseau vivant dans le marais.</p>
+                <img src="images/flamant.jpg" alt="Image d'un Flamant Rose">
+            </article>
+            <article>
+                <h3>Tortues</h3>
+                <p>Un animal pouvant atteindre un age très avancé et grossissant en fonction de son habitat.</p>
+                <img src="images/tortue.jpg" alt="Image d'une Tortue">
+            </article>
+            <article>
+                <h3>Lion d'Afrique</h3>
+                <p>Le roi de la savane, symbole de puissance et de majesté.</p>
+                <img src="images/lion.jpg" alt="Image d'un Lion">
+            </article>
+            <article>
+                <h3>Girafe</h3>
+                <p>Un grand cou lui permettant de toucher les nuages.</p>
+                <img src="images/girafe.jpg" alt="Image d'une Girafe">
+            </article>
+            <article>
+                <h3>Zèbre</h3>
+                <p>Equidé majestueux caractérisé par ses bandes de rayure noire et blanche.</p>
+                <img src="images/zebre.jpg" alt="Image d'un Zèbre">
             </article>
         </section>
 
@@ -48,17 +102,21 @@
             <article>
                 <h3>Restauration</h3>
                 <p>Profitez de plats locaux et biologiques dans notre restaurant.</p>
+                <img src="images/restaurant.jpg" alt="Image d'un restaurant">
             </article>
             <article>
                 <h3>Visite Guidée</h3>
                 <p>Explorez le zoo accompagné de nos soigneurs passionnés.</p>
+                <img src="images/visite.jpg" alt="Image d'une visite">
             </article>
             <article>
                 <h3>Petit Train</h3>
                 <p>Découvrez le parc à bord de notre train écologique.</p>
+                <img src="images/train.jpg" alt="Image d'un petit train">
             </article>
         </section>
-
+        
+        <!-- Section Avis -->
         <section id="avis">
             <h2>Avis des visiteurs</h2>
             <ul id="avis-liste">
@@ -74,6 +132,7 @@
             </form>
         </section>
 
+        <!-- Section Contact -->
         <section id="contact">
             <h2>Contact</h2>
             <p>Email : contact@zooarcadia.fr</p>
