--- a/services.html
+++ b/services.html
@@ -20,6 +20,15 @@
         </nav>       
     </header>
 
+    <div class="dropdown">
+        <button id="login-button">Connexion ▼</button>
+        <ul id="dropdown-menu" class="dropdown-menu">
+            <li><a href="#" class="login-option" data-role="veterinaire">Vétérinaire</a></li>
+            <li><a href="#" class="login-option" data-role="employe">Employé</a></li>
+            <li><a href="#" class="login-option" data-role="administrateur">Administrateur</a></li>
+        </ul>
+    </div>
+
     <main>
         <section>
             <h2>Restauration</h2>
