--- a/habitats.html
+++ b/habitats.html
@@ -3,43 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arcadia - Habitats</title>
+    <meta name="description" content="Découvrez les habitats naturels recréés au Zoo Arcadia : Jungle, Marais et Savane, où vivent nos fascinants animaux.">
+    <meta name="keywords" content="habitats, zoo, jungle, marais, savane, animaux, Arcadia">
+    <title>Habitats & Animaux - Zoo Arcadia</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- En-tête -->
     <header>
-        <h1>Nos Habitats</h1>
         <nav>
-            <ul>
+            <ul class="menu">
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="habitats.html">Habitats & Animaux</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="#login">Connexion</a></li>
+                <li class="dropdown">
+                    <button id="login-button">Connexion ▼</button>
+                    <ul id="dropdown-menu" class="dropdown-menu">
+                        <li><a href="#" class="login-option" data-role="veterinaire">Vétérinaire</a></li>
+                        <li><a href="#" class="login-option" data-role="employe">Employé</a></li>
+                        <li><a href="#" class="login-option" data-role="administrateur">Administrateur</a></li>
+                    </ul>
+                </li>
             </ul>
         </nav>
     </header>
 
+    <!-- Contenu principal -->
     <main>
-        <section>
-            <h2>La Jungle</h2>
-            <p>Habitat luxuriant pour les singes, perroquets et tigres.</p>
-            <img src="images/jungle.jpg" alt="Jungle">
+        <section id="habitats">
+            <h1>Nos Habitats</h1>
+            <div class="habitat-container">
+                <!-- Habitat Jungle -->
+                <div class="habitat">
+                    <img src="images/jungle.webp" alt="La Jungle">
+                    <h2>La Jungle</h2>
+                    <p>Une oasis luxuriante où vivent de nombreuses espèces fascinantes.</p>
+                    <ul class="animal-list">
+                        <li><a href="animal.html?name=Singe%20Capucin&species=Primates&image=images/singe.webp">Singe Capucin</a></li>
+                        <li><a href="animal.html?name=Tigre%20du%20Bengale&species=Panthera%20tigris&image=images/tigre.webp">Tigre du Bengale</a></li>
+                        <li><a href="animal.html?name=Perroquet%20Ara&species=Psittacidae&image=images/perroquet.webp">Perroquet Ara</a></li>
+                    </ul>
+                </div>
+
+                <!-- Habitat Marais -->
+                <div class="habitat">
+                    <img src="images/marais.webp" alt="Le Marais">
+                    <h2>Le Marais</h2>
+                    <p>Un habitat humide abritant crocodiles, flamants roses et tortues.</p>
+                    <ul class="animal-list">
+                        <li><a href="animal.html?name=Crocodile%20du%20Nil&species=Crocodylus%20niloticus&image=images/crocodile.webp">Crocodile du Nil</a></li>
+                        <li><a href="animal.html?name=Flamant%20Rose&species=Phoenicopteridae&image=images/flamant.webp">Flamant Rose</a></li>
+                        <li><a href="animal.html?name=Tortue%20d'eau%20douce&species=Testudines&image=images/tortue.webp">Tortue d'eau douce</a></li>
+                    </ul>
+                </div>
+
+                <!-- Habitat Savane -->
+                <div class="habitat">
+                    <img src="images/savane.webp" alt="La Savane">
+                    <h2>La Savane</h2>
+                    <p>Une vaste plaine où se promènent lions, girafes et zèbres.</p>
+                    <ul class="animal-list">
+                        <li><a href="animal.html?name=Lion&species=Panthera%20leo&image=images/lion.webp">Lion</a></li>
+                        <li><a href="animal.html?name=Girafe&species=Giraffa%20camelopardalis&image=images/girafe.webp">Girafe</a></li>
+                        <li><a href="animal.html?name=Zèbre&species=Equus%20quagga&image=images/zebre.webp">Zèbre</a></li>
+                    </ul>
+                </div>
+            </div>
         </section>
-        <section>
-            <h2>Le Marais</h2>
-            <p>Habitat humide pour crocodiles, flamants roses et tortues.</p>
-            <img src="images/marais.jpg" alt="Marais">
-        </section>
-        <section>
-            <h2>La Savane</h2>
-            <p>Vaste territoire pour lions, girafes et zèbres.</p>
-            <img src="images/savane.jpg" alt="Savane">
+
+        <!-- Section Contact -->
+        <section id="contact" aria-labelledby="contact-title">
+            <h2 id="contact-title">Contact</h2>
+            <p>Email : contact@zooarcadia.fr</p>
+            <p>Téléphone : 02 99 99 99 99</p>
+            <p>Horaires : Ouvert tous les jours de 9h à 18h</p>
         </section>
     </main>
 
+    <!-- Pied de page -->
     <footer>
         <p>&copy; 2024 Zoo Arcadia. Tous droits réservés.</p>
     </footer>
+
+    <script src="script.js" defer></script>
 </body>
 </html>
+
