--- a/habitats.html
+++ b/habitats.html
@@ -29,6 +29,26 @@
         </nav>
     </header>
 
+    <!-- Modale de connexion -->
+    <div id="login-modal" class="modal hidden">
+        <div class="modal-content">
+            <span id="close-modal" class="close">&times;</span>
+            <h2 id="modal-title">Connexion</h2>
+            <form id="login-form" action="auth.php" method="POST">
+                <input type="hidden" id="role" name="role">
+                <label for="username">Identifiant :</label>
+                <input type="text" id="username" name="username" required>
+
+                <label for="password">Mot de passe :</label>
+                <input type="password" id="password" name="password" placeholder="Entrez votre mot de passe" required>
+
+                <p id="error-message" class="error hidden">Identifiant ou mot de passe incorrect</p>
+
+                <button type="submit">Se connecter</button>
+            </form>
+        </div>
+    </div>
+
     <!-- Contenu principal -->
     <main>
         <section id="habitats">
